fix: pdp double scroll

--- a/styles/css/vtex.my-account.css
+++ b/styles/css/vtex.my-account.css
@@ -967,5 +967,5 @@
   padding: 10px 0 0;
 }
 :global(.vtex-store__template) {
-    overflow: hidden;
+    overflow-x: visible;
 }
